# PROJEKT_SO

./: CMakeLists.txt  README.md  config.c  config.h  main.c  passenger.c  passenger_factory.c  rm_ipc_ids.sh  rm_semaphores.sh  train.c  utilites.c  utilities.c  utilities.h
include/: config.h  utilities.h
src/: conductor.c  config.c  main.c  passenger.c  passenger_factory.c  platform.c  station_master.c  train.c  utilities.c
